--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -10,6 +10,7 @@ body {
     flex-direction: column;
     scroll-behavior: smooth;
     @apply mb-16 md:mb-0;
+    @apply bg-bg-primary;
 }
 
 button:hover {
