fix: tailwind config in css

--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -2,15 +2,94 @@
 
 @import 'tailwindcss';
 
-@config '../../tailwind.config.js';
+@theme {
+    --font-*: initial;
+    --font-sans: 'DM Sans', sans-serif;
+    --font-serif: 'Caudex', serif;
+
+    --color-dark-brown: #3a300a;
+    --color-brand-green: #34e776;
+    --color-bg-primary: #eef1f5;
+    --color-surface-primary: #fafafa;
+
+    --shadow-card: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
+
+    --animate-pulse-1: pulse 1s linear infinite;
+    --animate-pulse-2: pulse 1.5s linear infinite;
+    --animate-pulse-3: pulse 2s linear infinite;
+    --animate-pulse-4: pulse 2.5s linear infinite;
+    --animate-pulse-5: pulse 3s linear infinite;
+    --animate-bubble-up: bubble-up 2s ease-in-out infinite;
+    --animate-bubble-up-slow: bubble-up 3.5s ease-in-out infinite;
+    --animate-cauldron-rock: cauldron-rock 1.5s ease-in-out alternate infinite;
+    --animate-pulse-intense: pulse 1s ease-in-out infinite;
+    --animate-fade-in: fade-in 1s ease-in-out;
+    --animate-fade-in-slow: fade-in 2s ease-in-out;
+    --animate-fade-in-slower: fade-in 3s ease-in-out;
+    --animate-fade-in-up: fade-in-up 1s ease-in-out;
+
+    @keyframes bubble-up {
+        0% {
+            transform: 'translateY(10px)';
+            opacity: 0;
+        }
+        100% {
+            transform: 'translateY(-10px)';
+            opacity: 1;
+        }
+    }
+
+    @keyframes cauldron-rock {
+        0% {
+            transform: 'rotate(-10deg) scaleY(1.1)';
+        }
+        50% {
+            transform: 'rotate(0) scaleY(1)';
+        }
+        100% {
+            transform: 'rotate(10deg) scaleY(1.1)';
+        }
+    }
+
+    @keyframes pulse {
+        0% {
+            opacity: 1;
+        }
+        50% {
+            opacity: 0.2;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+
+    @keyframes fade-in {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+
+    @keyframes fade-in-up {
+        0% {
+            opacity: 0;
+            transform: 'translateY(10px)';
+        }
+        100% {
+            opacity: 1;
+            transform: 'translateY(0px)';
+        }
+    }
+}
 
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     scroll-behavior: smooth;
-    @apply mb-16 md:mb-0;
-    @apply bg-bg-primary;
+    @apply bg-bg-primary mb-16 md:mb-0;
 }
 
 button:hover {
