--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -11,7 +11,7 @@
     --color-brand-green: #34e776;
     --color-bg-primary: #eef1f5;
     --color-bg-secondary: #e0e4ea;
-    --color-surface-primary: rgba(250, 250, 250, 0.7);
+    --color-surface-primary: #f7f7f8;
 
     --shadow-elevated: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
 
